# weston-rs

./: .gitignore  .gitmodules  COPYING  Cargo.toml  README.md
libweston-sys/: Cargo.toml  build.rs  wrapper.h
libweston-sys/config/: config.h
libweston-sys/src/: lib.rs
weston-rs/: Cargo.toml
weston-rs/examples/: simple.rs
weston-rs/src/: backend.rs  compositor.rs  desktop.rs  display.rs  ev.rs  head.rs  keyboard.rs  launcher.rs  launcher_loginw.rs  layer.rs  lib.rs  listener.rs  matrix.rs  output.rs  output_api.rs  pointer.rs  seat.rs  surface.rs  touch.rs  view.rs
weston-rs/src/backend/: drm.rs  mod.rs  wayland.rs
weston-rs/src/desktop/: api.rs  client.rs  mod.rs  surface.rs
weston-rs/src/output_api/: drm.rs  mod.rs  windowed.rs
